<resources>
    <string name="app_name">TaskManage</string>
    <string name="welcome_message">Welcome to TaskMaster</string>
    <string name="enter_username_message">Enter your user name:</string>
    <string name="enter_password_message">Enter your password:</string>
    <string name="login_button">LOGIN</string>
    <string name="register_hint">Not registered? </string>
    <string name="register_button">REGISTER NOW!</string>
    <string name="enter_new_password">Enter a new password:</string>
    <string name="reenter_new_password">Enter the new password again:</string>
    <string name="type_hint">Type Here</string>
    <string name="switch_name">Urgent</string>
    <string name="button_name">ADD</string>
    <string name="hint_text">How to deal with this?</string>
    <string name="row_text">The selected row is: %1$d </string>
    <string name="delete_button_name">Delete</string>
    <string name="done_button_name">Completed</string>
    <string name="exit_button_name">Quit</string>
    <string name="progress_text">Progress: %d%%</string>
    <string name="done_count_text">已完成 %d 件事</string>

</resources>