<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/todoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Todo List"
        android:textSize="20dp"
        android:background="#D3D3D3"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/todoListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ListView
        android:id="@+id/todoListView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@+id/doneListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/doneTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Done List"
        android:textSize="20dp"
        android:background="#D3D3D3"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/doneListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoListView"
        />

    <FrameLayout
        android:id="@+id/doneFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/doneTextView"
        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/doneTextView"
        android:layout_marginTop="16dp" />

    <ListView
        android:id="@+id/doneListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doneTextView" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:hint="@string/type_hint" />

        <Switch
            android:id="@+id/urgentSwitch"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/switch_name" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_name" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>